--- a/projects.json
+++ b/projects.json
@@ -11,22 +11,7 @@
         "links":{
             "back":"https://github.com/Gabrielomn/reports-api",
             "front":"https://github.com/Gabrielomn/reports-front",
-            "live":"reports-admin.herokuapp.com"
-        }
-    },
-    {
-        "title":"Reports Messenger Bot",
-        "description":"An app with a dashboard done with angular to manage reports to be displayed on a messenger bot.",
-        "tech":[
-            "Mongodb",
-            "Nodejs",
-            "Express",
-            "Angular"
-        ],
-        "links":{
-            "back":"https://github.com/Gabrielomn/reports-api",
-            "front":"https://github.com/Gabrielomn/reports-front",
-            "live":"reports-admin.herokuapp.com"
+            "live":"https://reports-admin.herokuapp.com"
         }
     }
 ]
